0022910: Failure to compute iso-line for NURBS surface